Fix filter dropdown corner overflow

--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,7 @@ main {
   border-radius: 0 0px 5px 5px;
   z-index: 1;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
 }
 
 .media-sort--open .media-sort__options {
